--- a/templates/myapp.html
+++ b/templates/myapp.html
@@ -8,6 +8,7 @@
 <script type="text/javascript">
     {% autoescape off %}
         var dojoConfig = {
+			locale: 'ja',
             baseUrl: '//ajax.googleapis.com/ajax/libs/dojo/1.10.0/dojo',
             paths: {
                 'myapp': '/static/js/myapp'
